--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="logo" href="./"><img src="./image/bikcraft.svg" alt="Bikcraft"></a>
 
             <nav aria-label="primaria">
-                <ul class="header-menu">
+                <ul class="header-menu cor-00">
                     <li><a href="./bicicletas.html">Bicicletas</a></li>
                     <li><a href="./seguros.html">Seguros</a></li>
                     <li><a href="./contato.html">Contato</a></li>
@@ -28,6 +28,23 @@
         </div>
     </header>
 
+    <main class="introducao-bg">
+        <div class="introducao">
+            <div class="introducao-conteudo">
+                <h1 class="texto-grande cor-00">Bicicletas feitas sob medida <span class="cor-p1">.</span></h1>
+                <p class="texto-medio cor-05">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+                    para você.
+                    Explore o mundo na
+                    sua velocidade com a Bikcraft.</p>
+                <a class="button" href="./bicicletas.html">Escolha a sua</a>
+            </div>
+            <div>
+                <img src="./image/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+            </div>
+        </div>
+    </main>
+
+    <h2 class="texto-grande">escolha a sua <span class="cor-p1">.</span></h2>
 
 </body>
 
