--- a/index.html
+++ b/index.html
@@ -166,6 +166,45 @@
         </div>
     </article>
 
+    <footer class="footer-bg">
+        <div class="footer container">
+            <img src="./image/bikcraft.svg" alt="Bickcraft">
+            <div class="footer-contato">
+                <h3 class="font-2-l-b cor-00">Contato</h3>
+                <ul class="font-2-m cor-00">
+                    <li><a href="tel:+552199999999">+55 9999-9999</a></li>
+                    <li><a href="mailto:contato@bickraft.com">contato@bickraft.com</a></li>
+                    <li>Rua Ali Perto, 42 - Botafogo</li>
+                    <li>Rio de Janeiro - RJ</li>
+                </ul>
+
+                <div class="footer-redes">
+                    <a href="./">
+                        <img src="./image/redes/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href=" ./">
+                        <img src="./image/redes/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="./">
+                        <img src="./image/redes/youtube.svg" alt="Youtube">
+                    </a>
+                </div>
+            </div>
+            <div class="footer-informacoes">
+                <h3 class="font-2-l-b cor-00">Informações</h3>
+                <nav>
+                    <ul class="font-1-m cor-05">
+                        <li><a href="./bicicletas.html">Bicicletas</a></li>
+                        <li><a href="./seguros.html">Seguros</a></li>
+                        <li><a href="./contato.html">Contato</a></li>
+                        <li><a href="./termos.html">Termos e Condições</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <p class="footer-copy font-2-m cor-06">Bikcraft © Alguns direitos reservados.</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
