--- a/bicicletas.html
+++ b/bicicletas.html
@@ -91,7 +91,7 @@
                         </li>
 
                     </ul>
-                    <a class="button" href="./bicicletas/magic.html">Mais Sobre</a>
+                    <a class="button seta" href="./bicicletas/magic.html">Mais Sobre</a>
                 </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
                         </li>
 
                     </ul>
-                    <a class="button" href="./bicicletas/nebula.html">Mais Sobre</a>
+                    <a class="button seta" href="./bicicletas/nebula.html">Mais Sobre</a>
                 </div>
             </div>
         </div>
