--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nimbus.">
-    <title>Nimbus | Bickcraft</title>
+    <meta name="description" content="Nebula.">
+    <title>Nebula | Bickcraft</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -31,19 +31,19 @@
     <main class="titulo-bg">
         <div>
             <div class="titulo container">
-                <p class="font-2-xl cor-05">R$ 4999</p>
-                <h1 class="font-1-xxl cor-00">Nimbus Stark<span class="cor-p1">.</span></h1>
+                <p class="font-2-xl cor-05">R$ 3999</p>
+                <h1 class="font-1-xxl cor-00">Nebula Cosmic<span class="cor-p1">.</span></h1>
             </div>
         </div>
 
         <div class="bicicleta container">
             <div class="bicicleta-imagens">
+                <img src="../image/bicicleta/nimbus3.jpg" alt="">
                 <img src="../image/bicicleta/nimbus1.jpg" alt="">
                 <img src="../image/bicicleta/nimbus2.jpg" alt="">
-                <img src="../image/bicicleta/nimbus3.jpg" alt="">
             </div>
             <div class="bicicleta-conteudo">
-                <p class="font-2-l cor-05">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem
+                <p class="font-2-l cor-05">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem
                     equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <div class="bicicleta-comprar">
                     <a class="button" href="../orcamento.html">Comprar Agora</a>
@@ -62,7 +62,7 @@
                     </li>
                     <li>
                         <img src="../image/icones/velocidade.svg" alt="">
-                        <h3 class="font-1-m cor-00">50 km/h</h3>
+                        <h3 class="font-1-m cor-00">40 km/h</h3>
                         <p class="font-2-xs cor-05">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
                     </li>
                     <li>
@@ -102,10 +102,10 @@
                 </a>
             </li>
             <li>
-                <a href="./nebula.html">
-                    <img src="../image/bicicletas/nebula.jpg" alt="Bicicleta preta">
-                    <h3 class="font-1-xl cor-12">Nebula Cosmic</h3>
-                    <span class="font-2-m cor-08">R$ 3999</span>
+                <a href="./nimbus.html">
+                    <img src="../image/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl cor-12">Nimbus Stark</h3>
+                    <span class="font-2-m cor-08">R$ 4999</span>
                 </a>
             </li>
         </ul>
