--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description"
         content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
     <title>Bickcraft - Bicicletas Elétricas</title>
+
+    <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -15,7 +17,7 @@
 
     <header class="header-bg">
         <div class="header container">
-            <a class="logo" href="./"><img src="./image/bikcraft.svg" alt="Bikcraft"></a>
+            <a class="logo" href="./"><img src="./image/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
 
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-00">
@@ -38,9 +40,11 @@
                     sua velocidade com a Bikcraft.</p>
                 <a class="button" href="./bicicletas.html">Escolha a sua</a>
             </div>
-            <div>
-                <img src="./image/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
-            </div>
+            <picture>
+                <source media="(max-width: 800px)" srcset="./image/bicicletas/nimbus.jpg">
+                <img src="./image/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
+            </picture>
+
         </div>
     </main>
 
@@ -49,23 +53,23 @@
         <ul>
             <li>
                 <a href="./bicicletas/magic.html">
-                    <img src="./image/bicicletas/magic-home.jpg" alt="Bicicleta preta">
-                    <h3 font-1-xl>Magic Might</h3>
-                    <span class="font-2-m cor-8">R$ 2499</span>
+                    <img src="./image/bicicletas/magic-home.jpg" width="920" height="1040" alt="Bicicleta preta">
+                    <h3 class="font-1-xl cor-12">Magic Might</h3>
+                    <span class="font-2-m cor-08">R$ 2499</span>
                 </a>
             </li>
             <li>
                 <a href="./bicicletas/nimbus.html">
-                    <img src="./image/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
-                    <h3 font-1-xl>Nebula Cosmic</h3>
-                    <span class="font-2-m cor-8">R$ 4999</span>
+                    <img src="./image/bicicletas/nimbus-home.jpg" width="920" height="1040" alt="Bicicleta preta">
+                    <h3 class="font-1-xl cor-12">Nebula Cosmic</h3>
+                    <span class="font-2-m cor-08">R$ 4999</span>
                 </a>
             </li>
             <li>
                 <a href="./bicicletas/nebula.html">
-                    <img src="./image/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
-                    <h3 font-1-xl>Nimbus Stark</h3>
-                    <span class="font-2-m cor-8">R$ 3999</span>
+                    <img src="./image/bicicletas/nebula-home.jpg" width="920" height="1040" alt="Bicicleta preta">
+                    <h3 class="font-1-xl cor-12">Nimbus Stark</h3>
+                    <span class="font-2-m cor-08">R$ 3999</span>
                 </a>
             </li>
         </ul>
@@ -84,7 +88,7 @@
                 <a class="link" href=".bicicletas.html">Escolha um modelo</a>
                 <div class="tecnologia-vantagens">
                     <div>
-                        <img src="./image/icones/eletrica.svg" alt="">
+                        <img src="./image/icones/eletrica.svg" width="24" height="24" alt="">
                         <h3 class="font-1-m cor-00">Motor Elétrico</h3>
                         <p class="font-2-s cor-05">Toda Bikcraft é equipada com um motor elétrico que possui duração de
                             até
@@ -92,7 +96,7 @@
                             recarregada com a sua energia gasta ao pedalar.</p>
                     </div>
                     <div>
-                        <img src="./image/icones/rastreador.svg" alt="">
+                        <img src="./image/icones/rastreador.svg" width="24" height="24" alt="">
                         <h3 class="font-1-m cor-00">Rastreador</h3>
                         <p class="font-2-s cor-05">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
                             rastreadores e sistemas anti-furto
@@ -102,7 +106,7 @@
             </div>
 
             <div class="tecnologia-imagem">
-                <img src="./image/fotos/tecnologia.jpg" alt="">
+                <img src="./image/fotos/tecnologia.jpg" width="1200" height="1920" alt="">
             </div>
         </div>
     </article>
@@ -110,20 +114,21 @@
     <section class="parceiros" aria-label="Nossos Parceiros">
         <h2 class="container font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
         <ul>
-            <li><img src="./image/parceiros/caravan.svg" alt="caravan"></li>
-            <li><img src="./image/parceiros/ranek.svg" alt="ranek"></li>
-            <li><img src="./image/parceiros/handel.svg" alt="handel"></li>
-            <li><img src="./image/parceiros/dogs.svg" alt="dogs"></li>
-            <li><img src="./image/parceiros/lescone.svg" alt="lescone"></li>
-            <li><img src="./image/parceiros/flexblog.svg" alt="flexblog"></li>
-            <li><img src="./image/parceiros/wildbeast.svg" alt="wildbeast"></li>
-            <li><img src="./image/parceiros/surfbot.svg" alt="surfbot"></li>
+            <li><img src="./img/parceiros/caravan.svg" alt="Caravan" width="140" height="38"></li>
+            <li><img src="./img/parceiros/ranek.svg" alt="Ranek" width="149" height="36"></li>
+            <li><img src="./img/parceiros/handel.svg" alt="Handel" width="140" height="50"></li>
+            <li><img src="./img/parceiros/dogs.svg" alt="Dogs" width="152" height="39"></li>
+            <li><img src="./img/parceiros/lescone.svg" alt="LeScone" width="208" height="41"></li>
+            <li><img src="./img/parceiros/flexblog.svg" alt="FlexBlog" width="165" height="38"></li>
+            <li><img src="./img/parceiros/wildbeast.svg" alt="Wildbeast" width="196" height="34"></li>
+            <li><img src="./img/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>
         </ul>
     </section>
 
     <section class="depoimento" aria-label="Depoimento">
         <div>
-            <img src="./image/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikecrat">
+            <img src="./image/fotos/depoimento.jpg" width="1560" height="1360"
+                alt="Pessoa pedalando uma bicicleta Bikecrat">
         </div>
         <div class="depoimento-conteudo">
             <blockquote class="font-1-xl cor-p5">
@@ -168,7 +173,7 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="./image/bikcraft.svg" alt="Bickcraft">
+            <img src="./image/bikcraft.svg" width="136" height="32" alt="Bickcraft">
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-00">Contato</h3>
                 <ul class="font-2-m cor-00">
@@ -180,13 +185,13 @@
 
                 <div class="footer-redes">
                     <a href="./">
-                        <img src="./image/redes/instagram.svg" alt="Instagram">
+                        <img src="./image/redes/instagram.svg" width="32" height="32" alt="Instagram">
                     </a>
                     <a href=" ./">
-                        <img src="./image/redes/facebook.svg" alt="Facebook">
+                        <img src="./image/redes/facebook.svg" width="32" height="32" alt="Facebook">
                     </a>
                     <a href="./">
-                        <img src="./image/redes/youtube.svg" alt="Youtube">
+                        <img src="./image/redes/youtube.svg" width="32" height="32" alt="Youtube">
                     </a>
                 </div>
             </div>
