--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -46,7 +46,7 @@
                 <p class="font-2-l cor-05">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem
                     equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <div class="bicicleta-comprar">
-                    <a class="button" href="../orcamento.html">Comprar Agora</a>
+                    <a class="button" href="../orcamento.html?tipo=bikcraft&produto=magic">Comprar Agora</a>
                     <span class="font-1-xs cor-06"><img src="../image/icones/entrega.svg" alt=""> entrega em 5
                         dias</span>
                     <span class="font-1-xs cor-06"><img src="../image/icones/estoque.svg" alt=""> 18 em estoque</span>
@@ -164,6 +164,7 @@
         </div>
     </footer>
 
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
