--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
     <section class="parceiros" aria-label="Nossos Parceiros">
         <h2 class="container font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
         <ul>
-            <li><img src="./img/parceiros/caravan.svg" alt="Caravan" width="140" height="38"></li>
-            <li><img src="./img/parceiros/ranek.svg" alt="Ranek" width="149" height="36"></li>
-            <li><img src="./img/parceiros/handel.svg" alt="Handel" width="140" height="50"></li>
-            <li><img src="./img/parceiros/dogs.svg" alt="Dogs" width="152" height="39"></li>
-            <li><img src="./img/parceiros/lescone.svg" alt="LeScone" width="208" height="41"></li>
-            <li><img src="./img/parceiros/flexblog.svg" alt="FlexBlog" width="165" height="38"></li>
-            <li><img src="./img/parceiros/wildbeast.svg" alt="Wildbeast" width="196" height="34"></li>
-            <li><img src="./img/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>
+            <li><img src="./image/parceiros/caravan.svg" alt="Caravan" width="140" height="38"></li>
+            <li><img src="./image/parceiros/ranek.svg" alt="Ranek" width="149" height="36"></li>
+            <li><img src="./image/parceiros/handel.svg" alt="Handel" width="140" height="50"></li>
+            <li><img src="./image/parceiros/dogs.svg" alt="Dogs" width="152" height="39"></li>
+            <li><img src="./image/parceiros/lescone.svg" alt="LeScone" width="208" height="41"></li>
+            <li><img src="./image/parceiros/flexblog.svg" alt="FlexBlog" width="165" height="38"></li>
+            <li><img src="./image/parceiros/wildbeast.svg" alt="Wildbeast" width="196" height="34"></li>
+            <li><img src="./image/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>
         </ul>
     </section>
 
@@ -210,6 +210,7 @@
         </div>
     </footer>
 
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
