--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
     <main class="introducao-bg">
         <div class="introducao container">
             <div class="introducao-conteudo">
-                <h1 class="font-1-xxl cor-00">Bicicletas feitas sob medida <span class="cor-p1">.</span></h1>
-                <p class="font-2-l cor-05">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+                <h1 class="font-1-xxl cor-00 fadeInDown" data-anime="200">Bicicletas feitas sob medida <span
+                        class="cor-p1">.</span></h1>
+                <p class="font-2-l cor-05 fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e
+                    qualidade, feitas
+                    sob medida
                     para você.
                     Explore o mundo na
                     sua velocidade com a Bikcraft.</p>
-                <a class="button" href="./bicicletas.html">Escolha a sua</a>
+                <a class="button fadeInDown" data-anime="600" href="./bicicletas.html">Escolha a sua</a>
             </div>
-            <picture>
+            <picture class="fadeInDown" data-anime="800">
                 <source media="(max-width: 800px)" srcset="./image/bicicletas/nimbus.jpg">
                 <img src="./image/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
             </picture>
@@ -210,6 +213,7 @@
         </div>
     </footer>
 
+    <script src="./js/plugin/simple-anime.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
