Bikcraft - formulario add

--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
         content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
     <title>Bickcraft - Bicicletas Elétricas</title>
 
+    <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
     <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
+
+
+    <script>
+        document.documentElement.classList.add('js');
+    </script>
 </head>
 
 <body>
@@ -155,7 +161,7 @@
                     <li>Suporte 08h às 18h</li>
                     <li>Cobertura estadual</li>
                 </ul>
-                <a class="button secundario" href="./orcamento.html">Inscreva-se</a>
+                <a class="button secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
             </div>
             <div class="seguros-item">
                 <h3 class="font-1-xl cor-p1">OURO</h3>
@@ -169,7 +175,7 @@
                     <li>Desconto em parceiros</li>
                     <li>Acesso ao Clube Bikcraft</li>
                 </ul>
-                <a class="button" href="./orcamento.html">Inscreva-se</a>
+                <a class="button" href="./orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
             </div>
         </div>
     </article>
