--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nebula.">
     <title>Nebula | Bickcraft</title>
+    <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+    <script>
+        document.documentElement.classList.add('js');
+    </script>
 </head>
 
 <body id="bicicleta">
