--- a/termos.html
+++ b/termos.html
@@ -7,8 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Termos e Condições.">
     <title>Termos e Condições | Bickcraft</title>
+    <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
     <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
+    <script>
+        document.documentElement.classList.add('js');
+    </script>
 </head>
 
 <body id="termos">
